текстовая верстка страниц

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <a class="header-logo" href="index.html">Device</a>
         <form class="header-search" action="https://echo.htmlacademy.ru" method="post">
           <label for="header-search"></label>
-          <input type="search" name="header-search" id="header-search">
+          <input type="search" name="header-search" id="header-search" placeholder="Поиск по сайту">
           <div class="header-search-button">
             <input type="submit" value="Найти">
           </div>
@@ -31,6 +31,26 @@
           <ul class="navigation-list">
             <li class="navigation-item">
               <a class="navigation-link" href="catalog.html">Каталог товаров</a>
+              <ul class="catalog-list">
+                <li class="catalog-item">
+                  <a class="'catalog-item" href="#">Виртуальная реальность</a>"
+                </li>
+                <li class="catalog-item">
+                  <a class="'catalog-item" href="catalog.html">Моноподы для селфи</a>"
+                </li>
+                <li class="catalog-item">
+                  <a class="'catalog-item" href="#">Экшн-камеры</a>"
+                </li>
+                <li class="catalog-item">
+                  <a class="'catalog-item" href="#">Фитнес-браслеты</a>"
+                </li>
+                <li class="catalog-item">
+                  <a class="'catalog-item" href="#">Умные часы</a>"
+                </li>
+                <li class="catalog-item">
+                  <a class="'catalog-item" href="#">Квадрокоптеры</a>"
+                </li>
+              </ul>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#">Доставка</a>
@@ -43,7 +63,6 @@
             </li>
           </ul>
         </nav>
-      </div>
     </header>
     <main class="main-index">
       <h1 class="visually-hidden">
@@ -236,13 +255,13 @@
         <p class="subscription-slogan"> Подпишитесь на рассылку</p>
         <p class="subscripion-description">Еженедельный дайджест с обзорами новинок,
           длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
-          <p class="subscription-form">
-            <form class="subscription-form-email" action="https://echo.htmlacademy.ru" method="post">
-              <input type="email" placeholder="Ваш e-mail">
-              <button type="submit">Подписаться</button>
-            </form>
-          </p>
-          <p class="subscription-free">Это бесплатно</p>
+        <div class="subscription-form">
+          <form class="subscription-form-email" action="https://echo.htmlacademy.ru" method="post">
+            <input type="email" placeholder="Ваш e-mail">
+            <button type="submit">Подписаться</button>
+          </form>
+        </div>
+        <p class="subscription-free">Это бесплатно</p>
       </section>
     </main>
     <footer class="main-footer">
