--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header class="page-header">
       <div class="page-header-wrapper">
         <a class="header-logo" href="index.html">
-          <img class="logo" src="#" alt="Логотип">
+          <img class="logo" src="images/logo.svg" alt="Логотип" width="145" height="36">
         </a>
         <form class="header-search" action="https://echo.htmlacademy.ru" method="post">
           <label for="header-search"></label>
@@ -124,28 +124,28 @@
         <ul class="product-list">
           <li class="product-card">
             <a class="product-card-link">
-              <img class="product-card-image" src="#" alt="Любительская селфи-палка">
+              <img class="product-card-image" src="images/catalog-1.jpg" alt="Любительская селфи-палка" width="360" height="380">
               <h3 class="product-card-title">Любительская селфи-палка</h3>
               <b class="product-card-price">500 ₽</b>
             </a>
           </li>
           <li class="product-card">
             <a class="product-card-link">
-              <img class="product-card-image" src="#" alt="Профессиональная селфи-палка">
+              <img class="product-card-image" src="images/catalog-2.jpg" alt="Профессиональная селфи-палка" width="360" height="380">
               <h3 class="product-card-title">Профессиональная селфи-палка </h3>
               <b class="product-card-price">1 500 ₽</b>
             </a>
           </li>
           <li class="product-card">
             <a class="product-card-link">
-              <img class="product-card-image" src="#" alt="Непотопляемая селфи-палкаа">
+              <img class="product-card-image" src="images/catalog-3.jpg" alt="Непотопляемая селфи-палкаа" width="360" height="380">
               <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
               <b class="product-card-price">2 500 ₽</b>
             </a>
           </li>
           <li class="product-card">
             <a class="product-card-link">
-              <img class="product-card-image" src="#" alt="Селфи-палка «Следуй за мной»">
+              <img class="product-card-image" src="images/catalog-4.jpg" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
               <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
               <b class="product-card-price">1 500 ₽</b>
             </a>
@@ -183,7 +183,7 @@
     </main>
     <footer class="main-footer">
       <a class="footer-logo" href="index.html">
-        <img class="footer-logo-img" src="#" alt="логотип">
+        <img class="footer-logo-img" src="images/logo-footer.svg" alt="логотип" width="145" height="36">
       </a>
       <address class="footer-address">
         <p class="footer-address-text">
@@ -224,7 +224,8 @@
           </li>
         </ul>
         <p class="about-text">
-          <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy
+          <a class="htmlacademy-link" href="https://htmlacademy.ru/">
+            <img class="htmlacademy-img" src="images/logo-academy.svg" alt="логотип Html academy" width="115" height="33">
           </a>
         </p>
       </section>
