--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="page-header">
       <div class="page-header-wrapper">
         <a class="header-logo" href="index.html">
-          <img class="logo" src="#" alt="Логотип">
+          <img class="logo" src="images/logo.svg" alt="Логотип" width="145" height="36">
         </a>
         <form class="header-search" action="https://echo.htmlacademy.ru" method="post">
           <label for="header-search"></label>
@@ -86,7 +86,7 @@
         <article class="slider-item">
           <span class="product-number">01</span>
           <h3 class="visually-hidden">Квадрокоптер с лазером</h3>
-          <img src="#" alt="Квадрокоптер с лазером">
+          <img src="images/quadrocopter.png" alt="Квадрокоптер с лазером" width="560" height="560">
           <p class="product-slogan">
             Порхает как бабочка, жалит как пчела!
           </p>
@@ -108,7 +108,7 @@
         <article class="slider-item">
           <span class="product-number">02</span>
           <h3 class="visually-hidden">Фитнес-браслет</h3>
-          <img src="#" alt="Фитнес-браслет">
+          <img src="images/fitness-bracelet.png" alt="Фитнес-браслет" width="560" height="560">
           <p class="product-slogan">
             Худеем правильно!
           </p>
@@ -128,7 +128,7 @@
         <article class="slider-item">
           <span class="product-number">03</span>
           <h3 class="visually-hidden">Палка для селфи</h3>
-          <img src="#" alt="Палка для селфи">
+          <img src="images/selfie-stick.png" alt="Палка для селфи" width="560" height="560">
           <p class="product-slogan">
             Делай селфи, как Бен Стиллер!
           </p>
@@ -155,37 +155,37 @@
         <ul class="products-catalog">
           <li class="product-item">
             <a class="product-list" href="#">
-              <img src="#" alt="Очки виртуальной реальности">
+              <img src="images/product-virtual-reality.svg" alt="Очки виртуальной реальности" width="97" height="55">
               <h3>Виртуальная реальность</h3>
             </a>
           </li>
           <li class="product-item">
             <a class="product-list" href="#">
-              <img src="#" alt="Моноподы для селфи">
+              <img src="images/product-monopod.svg" alt="Моноподы для селфи" width="86" height="117">
               <h3>Моноподы для селфи</h3>
             </a>
           </li>
           <li class="product-item">
             <a class="product-list" href="#">
-              <img src="#" alt="Экшн-камеры">
+              <img src="images/product-camera.svg" alt="Экшн-камеры" width="71" height="87">
               <h3>Экшн-камеры</h3>
             </a>
           </li>
           <li class="product-item">
             <a class="product-list" href="#">
-              <img src="#" alt="Фитнес-браслеты">
+              <img src="images/product-bracelet.svg" alt="Фитнес-браслеты" width="107" height="65">
               <h3>Фитнес-браслеты</h3>
             </a>
           </li>
           <li class="product-item">
             <a class="product-list" href="#">
-              <img src="#" alt="Умные часы">
+              <img src="images/product-smart-clock.svg" alt="Умные часы" width="56" height="98">
               <h3>Умные часы</h3>
             </a>
           </li>
           <li class="product-item">
             <a class="product-list" href="#">
-              <img src="#" alt="Квадрокоптеры">
+              <img src="images/product-quadcopter.svg" alt="Квадрокоптеры" width="132" height="69">
               <h3>Квадрокоптеры</h3>
             </a>
           </li>
@@ -193,14 +193,17 @@
       </section>
       <section class="service">
         <h2 class="visually-hidden">Услуги Интернет-магазина</h2>
-        <input class="visually-hidden" type="radio" id="slider-delivery" name="toggle" checked>
-        <input class="visually-hidden" type="radio" id="slider-warranty" name="toggle">
-        <input class="visually-hidden" type="radio" id="slider-credit" name="toggle">
-        <div class="service-slider-controls">
-          <label for="slider-delivery">Доставка</label>
-          <label for="slider-warranty">Гарантия</label>
-          <label for="slider-credit">Кредит</label>
-        </div>
+        <ul class="service-list-btn">
+          <li class="service-item-btn">
+            <button class="service-btn">Доставка</button>
+          </li>
+          <li class="service-item-btn">
+            <button class="service-btn">Гарантия</button>
+          </li>
+          <li class="service-item-btn">
+            <button class="service-btn">Кредит</button>
+          </li>
+        </ul>
         <ul class="service-list">
           <li class="service-item">
             <h3 class="service-title">Доставка</h3>
@@ -280,7 +283,7 @@
     </main>
     <footer class="main-footer">
       <a class="footer-logo" href="index.html">
-        <img class="footer-logo-img" src="#" alt="логотип">
+        <img class="footer-logo-img" src="images/logo-footer.svg" alt="логотип" width="145" height="36">
       </a>
       <address class="footer-address">
         <p class="footer-address-text">
@@ -321,7 +324,8 @@
           </li>
         </ul>
         <p class="about-text">
-          <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy
+          <a class="htmlacademy-link" href="https://htmlacademy.ru/">
+            <img class="htmlacademy-img" src="images/logo-academy.svg" alt="логотип Html academy" width="115" height="33">
           </a>
         </p>
       </section>
