--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header class="page-header">
@@ -21,16 +22,16 @@
         <nav class="navigation">
           <ul class="navigation-list navigation-user">
             <li class="navigation-item">
-              <a class="user-linl">Коля Петухов</a>
+              <a class="user-navigation-link">Коля Петухов</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="#">Выйти</a>
+              <a class="user-navigation-link" href="#">Выйти</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="#">Сравнить</a>
+              <a class="user-navigation-link" href="#">Сравнить</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="#">Корзина</a>
+              <a class="user-navigation-link" href="#">Корзина</a>
             </li>
           </ul>
           <ul class="navigation-list">
@@ -50,7 +51,7 @@
         </nav>
     </header>
     <main class="main-inner">
-      <h1>Моноподы для селфи</h1>
+      <h1 class="main-inner-title">Моноподы для селфи</h1>
       <ul class="breadcrumbs">
         <li class="breadcrumbs-item">
           <a class="breadcrumbs-link" href="index.html">Главная</a>
@@ -151,7 +152,7 @@
             </a>
           </li>
         </ul>
-        <button class="button pagination-show-more" type="button">Загрузить ещё</button>
+        <button class="pagination-show-more" type="button">Загрузить ещё</button>
         <ul class="pagination">
           <li class="pagination-item">
             <a class="pagination-link pagination-prev pagination-disabled">
