--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div>
     </header>
 
-    <main class="main-index main-container">
+    <main class="main-index">
       <div class="products-container">
         <h1 class="visually-hidden">
           Интернет-магазин "Девайс"
