:heavy_check_mark: Сборка #5

--- a/5/index.html
+++ b/5/index.html
@@ -69,7 +69,7 @@
       </div>
     </header>
 
-    <main class="main-index main-container">
+    <main class="main-index">
       <div class="products-container">
         <h1 class="visually-hidden">
           Интернет-магазин "Девайс"
